--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,37 +1,35 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<div class="container">
-    <!-- <h1>Welcome to Home Page</h1> -->
-    <!-- <h1>Welcome to Home Page, {{ name }}</h1> -->
-    <!-- <h2>This is the full home page</h2> -->
-    <form action="">
-        <div class="mb-3">
-            <label for="searchMovie" class="form-label">
-                Search for Movie:
-            </label>
-            <input type="text" class="form-control" name="searchMovie" />
-        </div>
-        <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-    <p>Searching for: {{ searchTerm }}</p>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for movie in movies %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </head>
+  <div class="container">
+    <!-- mejora el espaciado de la pagina-->
+    <div class="mb-3"> <!-- agrega espacio inferior de 3 unidades-->
+        <label for="searchMovie" class="form-label"> <!-- asociado un texto descriptivo con un campo de entrada en un formulario -->
+            Search for Movie:
+        </label>
+        <input type="text" class="form-control" name="searchMovie"/>
+    </div>
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
+<div class="row row-cols-1 row-cols-md-3 g-4"> <!-- define una fila en una cuadrícula con una columna en pantallas extra pequeñas y tres columnas en pantallas medianas, con un espacio de 4 unidades entre ellas -->
+    {% for movie in movies %}
         <div class="col">
-            <div class="card">
-                <img class="card-img-top" src="{{ movie.image.url }}" />
+            <div class="card" style="width: 18rem;">
+                <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+                    <h5 class="card-title">{{ movie.title }}</h5>
                     <p class="card-text">{{ movie.description }}</p>
+                    <p class="card-text">{{genre}}</p>
+                    <p class="card-text">{{year}}</p>
                     {% if movie.url %}
-                    <a href="{{ movie.url }}" class="btn btn-primary">
-                        Movie Link
-                    </a>
+                        <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
                     {% endif %}
                 </div>
             </div>
         </div>
-        {% endfor %}
-    </div>
-    <br />
+    {% endfor %}
+</div>
+<br/>
 </div>
