visualizacion de genero y year

--- a/movie/templates/about.html
+++ b/movie/templates/about.html
@@ -1,1 +1,6 @@
-<h1>Welcome to About Page </h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>About</h1>
+<p>Esta es un ejemplo de una pagina desarrollada en django usando bootstrap</p>
+{% endblock content %}
